--- a/client/pages/info/add.wxml
+++ b/client/pages/info/add.wxml
@@ -37,26 +37,34 @@
             </view>
         
             <view class="weui-cells__title">填写拼车信息</view>
+
+
             <view class="weui-cells weui-cells_after-title">
-                <view class="weui-cell weui-cell_input StartAndStop">
+                <view class="weui-cell weui-cell_input weui-cell_vcode">
                     <view class="weui-cell__hd">
                         <view class="weui-label">出发地</view>
                     </view>
-                    <picker mode="selector"   bindchange="selectStart" range="{{destinations}}">
-                      <view class="weui-cell__bd">
-                          <view class="weui-input" >{{destinations[startIndex]}}</view>                 
-                      </view>
-                    </picker>
+                    <view class="weui-cell__bd">
+                    
+                      <picker mode="selector" name="departure"   bindchange="selectStart" range="{{destinations}}">
+                            <view class="weui-input" >{{destinations[startIndex]}}</view>                    
+                      </picker>
+                    
+                     </view>
+                     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
                 </view>
-                <view class="weui-cell weui-cell_input StartAndStop">
+                <view class="weui-cell weui-cell_input weui-cell_vcode">
                     <view class="weui-cell__hd">
                         <view class="weui-label">目的地</view>
                     </view>
-                    <picker mode="selector"   bindchange="selectEnd" range="{{destinations}}">
-                      <view class="weui-cell__bd">
+                    <view class="weui-cell__bd">
+                    <picker mode="selector" name="destination"  bindchange="selectEnd" range="{{destinations}}">
+                      
                           <view class="weui-input" >{{destinations[endIndex]}}</view>                 
-                      </view>
+                     
                     </picker>
+                     </view>
+                     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
                 </view>
                 <!-- <image src="/img/to.png" class="to1"></image> -->
                         
@@ -87,7 +95,7 @@
                         <view class="weui-label">拼车价格</view>
                     </view>
                     <view class="weui-cell__bd">
-                        <input class="weui-input" name="price" value="{{price}}" placeholder="请填写价格,不填则为面议"/>
+                        <input class="weui-input" name="price" value="{{price}}"  placeholder="6"/>
                     </view>
                 </view>
                 <view class="weui-cell weui-cell_input" wx:if="{{type == 1}}">
@@ -135,7 +143,7 @@
 
                 <view class="weui-cell weui-cell_input">
                     <view >
-                        <checkbox-group  name="isAllTypes" bindchange="selectAllTypes">
+                        <checkbox-group  name="isAllTypesValues" bindchange="selectAllTypes">
                             <label style="display:flex;" wx:for="{{destinations}}" wx:key="value">
                                 <checkbox value="{{item}}" checked="0"/><text>{{item}}</text>
                             </label>
