--- a/client/pages/info/add.wxml
+++ b/client/pages/info/add.wxml
@@ -100,7 +100,7 @@
                 </view>
                 <view class="weui-cell weui-cell_input" wx:if="{{type == 1}}">
                     <view class="weui-cell__hd">
-                        <view class="weui-label">车型</view>
+                        <view class="weui-label">车型/颜色</view>
                     </view>
                     <view class="weui-cell__bd">
                         <input class="weui-input" type="text" name="vehicle" value="{{vehicle}}" placeholder="请填写车型"/>
