--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -36,32 +36,42 @@
  <!--主体-->
  <view class="page__bd"> 
   <view class="weui-tab">
-            <view class="weui-navbar">
+             <!-- <view class="weui-navbar">
       
-                <!-- <block wx:for="{{tabs}}" wx:key="*this">
+                 <block wx:for="{{tabs}}" wx:key="*this">
                     <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
                         <view class="weui-navbar__title">{{item}}</view>
                     </view>
                 </block>
-                <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view> -->
-            </view>
+                <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view> 
+            </view>  -->
             <view class="weui-tab__panel">
                 <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
                     
                     <view class="weui-panel__bd">
-                        <navigator wx:for="{{list}}" wx:for-index="idx" wx:key="k" wx:for-item="item" url="{{item.url}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+                        <view wx:for="{{list}}" wx:for-index="idx" wx:key="k" wx:for-item="item" url="{{item.url}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
                             <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
                                 <image class="weui-media-box__thumb" src="{{item.avatarUrl}}" ></image>
                             </view>
                             <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
                                 <view class="weui-media-box__title list_title"><text class="list_start">{{item.start}}</text> <image src="/img/to.png" class="to1"></image> <text class="list_over">{{item.over}}</text><text class="list_tm">{{item.tm}}</text></view>
-                                <view class="weui-media-box__desc list_desc">出发：{{item.date}} {{item.time}}</view>
+                                <view class="weui-media-box__desc list_desc">接送：{{item.isAllTypesMsg}} </view>
                                 <view class="weui-media-box__info">
-                                    <view class="weui-media-box__info__meta list_type_{{item.tp}}">{{item.type}}</view>
-                                    <view class="weui-media-box__info__meta"><image src="/img/people.png" class="list_icon"></image><text>{{item.surplus}}</text></view>
+                                    
+                                    <view class="weui-media-box__info__meta">
+                                     <image src="/img/people.png" class="list_icon"></image><text>剩余:{{item.surplus}}</text>
+                                    </view>
+                                    <view class="weui-media-box__info__meta list_type_2" bindtap="madal">预约</view>
+                                    
+                                    <navigator url="{{item.url}}">
+                                     <view class="weui-media-box__info__meta list_type_1" >详情</view>
+                                    </navigator>
+
+                                    <view class="weui-media-box__info__meta list_type_1" bindtap="tel">打电话</view>
+                                   
                                 </view>
                             </view>
-                        </navigator>
+                        </view>
                     </view>
 
                 </view>
@@ -118,3 +128,42 @@
     <image src="/img/adddy.png"></image>
     </view>
 </navigator>
+
+<modal class="modal" hidden="{{!modalFlag}}" title="申请预约" no-cancel bindconfirm="modalOk" confirmText="不了，我再看看">  
+    <view class="dew">  
+      <form report-submit="true" bindsubmit="appointment">
+        <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">姓名</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input class="weui-input" name="name" value="{{userInfo.name}}" placeholder="请填写姓名"/>
+                </view>
+            </view>
+            <view class="weui-cell weui-cell_input weui-cell_vcode">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">手机号</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input class="weui-input" type="number"  name="phone" value="{{userInfo.phone}}" placeholder="请输入手机号" />
+                </view>
+            </view>
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">乘车人数</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <picker mode="selector"  name="surplus" value="{{surplus}}" range="{{Surpluss}}" bindchange="setsurplus">
+                        <view class="weui-input">{{Surpluss[surplus]}}</view>
+                    </picker>
+                </view>
+                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+            </view>
+            
+            <button class="weui-btn" type="primary" formType="submit">确定</button>
+
+        </view>
+      </form> 
+</view>  
+</modal>
