--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -1,5 +1,6 @@
 <view class="page">
  <!--页头-->
+ <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">{{errorMsg}}</view>
  <view class="page__hd">
   <view class="head">
    <picker mode="selector" name="gender" value="" range="{{destination}}" bindchange="selectStart">
@@ -61,8 +62,8 @@
                                     <view class="weui-media-box__info__meta">
                                      <image src="/img/people.png" class="list_icon"></image><text>剩余:{{item.surplus}}</text>
                                     </view>
-                                    <view class="weui-media-box__info__meta list_type_2" bindtap="madal">预约</view>
-                                    
+                                    <view class="weui-media-box__info__meta list_type_2"  data-id="{{item.id}}" data-surplus="{{item.surplus}}" bindtap="madal">预约</view>
+
                                     <navigator url="{{item.url}}">
                                      <view class="weui-media-box__info__meta list_type_1" >详情</view>
                                     </navigator>
@@ -138,7 +139,7 @@
                     <view class="weui-label">姓名</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" name="name" value="{{userInfo.name}}" placeholder="请填写姓名"/>
+                    <input class="weui-input" name="name" value="{{userinfoName}}" placeholder="请填写姓名"/>
                 </view>
             </view>
             <view class="weui-cell weui-cell_input weui-cell_vcode">
@@ -146,7 +147,7 @@
                     <view class="weui-label">手机号</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" type="number"  name="phone" value="{{userInfo.phone}}" placeholder="请输入手机号" />
+                    <input class="weui-input" type="number"  name="phone" value="{{userinfoPhone}}" placeholder="请输入手机号" />
                 </view>
             </view>
             <view class="weui-cell weui-cell_input">
