--- a/client/pages/info/index.wxml
+++ b/client/pages/info/index.wxml
@@ -18,10 +18,10 @@
 
     <view class="page__bd content">
         <view class="p">
-            <image src="/img/cle1.png" class="icon icon-departure"></image><text>{{data.departure}}</text>
+            <image src="/img/cle1.png" class="icon icon-departure"></image><text>出发地:{{data.departure}}</text>
         </view>
         <view class="p">
-            <image src="/img/cle.png" class="icon icon-departure"></image><text>{{data.destination}}</text>
+            <image src="/img/cle.png" class="icon icon-departure"></image><text>目的地:{{data.destination}}</text>
         </view>
         <view class="p contact">
             <text class="tit">联系人:</text><text>{{data.name}}</text>
@@ -31,17 +31,17 @@
         <view class="p contact">
             <text class="tit">出发时间:</text><text>{{data.tm}}</text>
         </view>
-        <view class="p contact" wx:if="{{data.type == 1}}">
+        <view class="p contact" >
             <text class="tit">拼车价格:</text><text>{{data.price}}</text>
         </view>
         <view class="p contact">
-            <text wx:if="{{data.type == 1}}" class="tit">剩余空位:</text><text wx:elif="{{data.type == 2}}" class="tit">人数:</text><text>{{data.surplus}}</text>
+            <text class="tit">剩余空位: </text> <text>{{data.surplus}}</text>
         </view>
-        <view class="p contact" wx:if="{{data.type == 1}}">
-            <text class="tit">车型:</text><text>{{data.vehicle}}</text>
+        <view class="p contact" >
+            <text class="tit">车型颜色:</text><text>{{data.vehicle}}</text>
         </view>
         <view class="p contact">
-            <text class="tit">备注:</text>
+            <text class="tit">备注说明:</text>
         </view>
         <view class="p remark">
             {{data.remark}}
