--- a/client/pages/msg/index.wxml
+++ b/client/pages/msg/index.wxml
@@ -13,7 +13,7 @@
                 <view class="weui-cell__ft weui-cell__ft_in-access"><view class="weui-badge" wx:if="{{data.comment}}" style="margin-left: 5px;">{{data.comment}}</view></view>
             </navigator>
         </view>
-        <view class="weui-cells weui-cells_after-title">
+        <!-- <view class="weui-cells weui-cells_after-title">
             <navigator url="/pages/msg/list?id=zan" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__hd">
                    <image src="/img/msg_2.png" style="margin-right: 5px;vertical-align: middle;width:40px; height: 40px;"></image>
@@ -21,7 +21,7 @@
                 <view class="weui-cell__bd">赞</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"><view class="weui-badge" wx:if="{{data.zan}}" style="margin-left: 5px;">{{data.zan}}</view></view>
             </navigator>
-        </view>
+        </view> -->
         <view class="weui-cells weui-cells_after-title">
             <navigator url="/pages/msg/list?id=notice" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__hd">
