--- a/client/pages/my/index.wxml
+++ b/client/pages/my/index.wxml
@@ -26,13 +26,13 @@
                 <view class="weui-cell__bd">我的预约</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"><view class="weui-badge" wx:if="{{appointmentCount>0}}" style="margin-left: 5px;">{{appointmentCount}}</view></view>
             </navigator>
-            <navigator url="/pages/my/fav" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <!-- <navigator url="/pages/my/fav" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__hd">
                    <image src="/img/fav1.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
                 </view>
                 <view class="weui-cell__bd">我的收藏</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-            </navigator>
+            </navigator> -->
             <navigator url="/pages/my/mydyn" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__hd">
                    <image src="/img/dy.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
