--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -162,6 +162,18 @@
                 </view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </view>
+           <checkbox-group bindchange="bindAgreeChange" name="isAgree">
+           
+            <label class="weui-agree" for="weuiAgree">
+                <view class="weui-agree__text">
+                    <checkbox class="weui-agree__checkbox" id="weuiAgree" value="agree" checked="{{isAgree}}" />
+                    <view class="weui-agree__checkbox-icon">
+                        <icon class="weui-agree__checkbox-icon-check" type="success_no_circle" size="9" wx:if="{{isAgree}}"></icon>
+                    </view>
+                    阅读并同意<navigator url="/pages/notice/index?id=1" class="weui-agree__link">《免责声明》</navigator>
+                </view>
+            </label>
+        </checkbox-group>
             
             <button class="weui-btn" type="primary" formType="submit">确定</button>
 
