--- a/client/pages/info/edit.wxml
+++ b/client/pages/info/edit.wxml
@@ -42,17 +42,26 @@
                     <view class="weui-cell__hd">
                         <view class="weui-label">出发地</view>
                     </view>
-                    <view class="weui-cell__bd">
-                        <view class="weui-input" bindtap="sexDeparture">{{data.departure}}</view>                 
+                    <view class="weui-cell__bd">            
+                      <picker mode="selector" name="departure"   bindchange="selectStart" range="{{destinations}}">
+                            <view class="weui-input" >{{destinations[startIndex]}}</view>                    
+                      </picker>              
                     </view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
                 </view>
                 <view class="weui-cell weui-cell_input StartAndStop">
                     <view class="weui-cell__hd">
                         <view class="weui-label">目的地</view>
                     </view>
                     <view class="weui-cell__bd">
-                        <view class="weui-input stop" bindtap="sexDestination">{{data.destination}}</view>
+                    <picker mode="selector" name="destination"  bindchange="selectEnd" range="{{destinations}}">
+                      
+                          <view class="weui-input" >{{destinations[endIndex]}}</view>                 
+                                 
+                     
+                    </picker>
                     </view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
                 </view>
                 <!-- <image src="/img/to.png" class="to1"></image> -->
                         
@@ -86,7 +95,7 @@
                         <input class="weui-input" name="price" value="{{data.price}}" placeholder="请填写价格,不填则为面议"/>
                     </view>
                 </view>
-                <view class="weui-cell weui-cell_input" wx:if="{{data.type == 1}}">
+                <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
                         <view class="weui-label">车型</view>
                     </view>
@@ -94,7 +103,7 @@
                         <input class="weui-input" type="text" name="vehicle" value="{{data.vehicle}}" placeholder="请填写车型"/>
                     </view>
                 </view>
-                <view class="weui-cell weui-cell_input"  wx:if="{{data.type == 1}}">
+                <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
                         <view class="weui-label">剩余空位</view>
                     </view>
@@ -139,7 +148,7 @@
         </checkbox-group>
 
         <view class="weui-btn-area">
-            <button class="weui-btn" type="primary" formType="submit">确定</button>
+            <button class="weui-btn" type="primary" formType="submit">重新发布</button>
         </view>
 
         </form>
