--- a/client/pages/my/list.wxml
+++ b/client/pages/my/list.wxml
@@ -12,7 +12,7 @@
             <text class="list_tm">{{item.tm}}</text></view>
             <view class="weui-media-box__desc list_desc">出发：{{item.date}} {{item.time}}</view>
             <view class="weui-media-box__info">
-                <!-- <view class="weui-media-box__info__meta list_type_{{item.tp}}">{{item.type}}</view> -->
+                 <view class="weui-media-box__info__meta list_type_{{item.tp}}">{{item.type}}</view> 
                 <view class="weui-media-box__info__meta"><image src="/img/people.png" class="list_icon"></image><text>{{item.surplus}}</text></view>
                 <view class="weui-media-box__info__meta" class="editdiv"><button class="editbtn" bindtap="edit" id="{{idx}}" type="primary">修改</button><button class="editbtn" bindtap="del" id="{{idx}}" type="warn">删除</button></view>
             </view>
