--- a/client/pages/info/edit.wxss
+++ b/client/pages/info/edit.wxss
@@ -6,6 +6,7 @@
 .to1{width: 30px;height:30px;position:absolute;top:6px;}
 .stop{margin-left:40px;}*/
 .weui-label{color:black}
+.remaind{color:red}
 .radio text{margin:0rpx 8rpx;}
 .radio{margin-right: 12rpx;}
 .weui-btn{background: #f4de3b!important;color:#000!important;}
