--- a/client/pages/info/add.wxml
+++ b/client/pages/info/add.wxml
@@ -96,7 +96,7 @@
                     </view>
                     <view class="weui-cell__bd">
                          <picker mode="selector" name="price" value="{{price}}" range="{{prices}}"   bindchange="bindPriceChange">
-                              <view class="weui-input" name="price" value="{{prices[priceIndex]}}"  placeholder="0"/>
+                              <view class="weui-input" >{{prices[priceIndex]}}</view>
                            </picker>
                     </view>
                     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
@@ -146,9 +146,9 @@
 
                 <view class="weui-cell weui-cell_input">
                     <view >
-                        <checkbox-group  name="isAllTypesValues" bindchange="selectAllTypes">
-                            <label style="display:flex;" wx:for="{{destinations}}" wx:key="{{item}}">
-                                <checkbox value="{{item}}" checked="1"/><text>{{item}}</text>
+                        <checkbox-group  name="isAllTypesValues" bindchange="selectAllTypesValues">
+                            <label style="display:flex;" wx:for="{{newisAllTypes}}" wx:key="{{item.name}}">
+                                <checkbox value="{{item.value}}" disabled="{{item.disabled}}" checked="{{item.checked}}"/><text>{{item.value}}</text>
                             </label>
                         </checkbox-group>
                     </view>
