--- a/client/pages/my/list.wxml
+++ b/client/pages/my/list.wxml
@@ -14,7 +14,7 @@
             <view class="weui-media-box__info">
                  <view class="weui-media-box__info__meta list_type_{{item.tp}}">{{item.type}}</view> 
                 <view class="weui-media-box__info__meta"><image src="/img/people.png" class="list_icon"></image><text>{{item.surplus}}</text></view>
-                <view class="weui-media-box__info__meta" class="editdiv"><button class="editbtn" bindtap="edit" id="{{idx}}" type="primary">修改记录/使用模板重新发布</button><button class="editbtn" bindtap="del" id="{{idx}}" type="warn">删除</button></view>
+                <view class="weui-media-box__info__meta" class="editdiv"><button class="editbtn" bindtap="edit" id="{{idx}}" type="primary">修改记录/使用模板重新发布</button><button class="editbtn" bindtap="del" id="{{idx}}" type="warn">删除/约满</button></view>
             </view>
         </view>
     </view>
