--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -117,10 +117,11 @@
 <view class="page__bd">
     <view class="weui-loadmore" bindtap="onReachBottom" wx:if="{{!nomore}}">
         <view class="weui-loading"></view>
-        <view class="weui-loadmore__tips">正在加载</view>
+        <!-- <view class="weui-loadmore__tips">正在加载</view> -->
+        <view class="weui-loadmore__tips">下拉刷新</view>
     </view>
     <view class="weui-loadmore weui-loadmore_line" wx:if="{{nomore}}">
-        <view class="weui-loadmore__tips weui-loadmore__tips_in-line">没有更多了~</view>
+        <view class="weui-loadmore__tips weui-loadmore__tips_in-line">下拉刷新~</view>
     </view>
 </view>
 </view>
